@@ -7,6 +7,7 @@ Generic changes/fixes
 		
 Device specific changes/fixes
 	* Junsi iChargerUSB - add message box signaling timeout while initializing program memories for dialog
+	* Junsi iChargerDX6,S6 - cleanup duplicated BatteryTypesX definition
 
 Version 3.5.2 - 23 DEC 2021
 Generic changes/fixes
